--- a/server/package.json
+++ b/server/package.json
@@ -3,18 +3,19 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "test": "",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/main.ts",
     "start": "node dist/index.js",
     "build": "tsc -p .",
-    "db:init": "psql $DATABASE_URL -f migrations/001_init.sql",
-    "db:seed": "psql $DATABASE_URL -f migrations/002_seedData.sql"
+    "db:init": "npx dotenv psql $DATABASE_URL -f migrations/001_init.sql",
+    "db:seed": "npx dotenv psql $DATABASE_URL -f migrations/002_seedData.sql",
+    "db:migrate": "npm run db:init && npm run db:seed"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -30,8 +31,10 @@
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
     "@types/pg": "^8.16.0",
+    "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^8.51.0",
     "@typescript-eslint/parser": "^8.51.0",
+    "dotenv-cli": "^11.0.0",
     "eslint": "^9.39.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
